--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app"
+    "start": "node src/app",
+    "dev": "nodemon src/app -e js,hbs "
   },
   "keywords": [],
   "author": "Luis Flores <naokodeveloper@gmail.com>",
@@ -14,5 +15,8 @@
     "express": "^4.17.1",
     "hbs": "^4.1.2",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
